--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Mi primera pagina web</title>
-  <link rel="stylesheet" type="text/css" href="styleclase8.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 
 </head>
 
@@ -13,7 +13,7 @@
       <nav class="navbar" role="navigation"></nav>
       <a href="#" class="brand">Mi página web</a>
       <ul class="nav-links">
-        <li><a href="mejorando.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -47,7 +47,7 @@
       </div>
     </main>
 
-    <script src="/scriptclase8.js"></script>
+    <script src="script.js"></script>
     </div>
   </main>
 </body>
