--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Mi primera pagina web</title>
-    <link rel="stylesheet" type="text/css" href="styleclase8.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
 </head>
 
@@ -12,7 +12,7 @@
     <nav class="navbar" role="navigation"></nav>
         <a href="#" class="brand">Mi página web</a>
         <ul class="nav-links">
-            <li><a href="mejorando.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -30,7 +30,7 @@
         <li>Servicio 3</li>
         </ul>
         
-        <script src="/scriptclase8.js"></script>
+        <script src="script.js"></script>
   </div> 
  </body>    
   
